# Lab_bot

./: README.md  alembic.ini  lab_bot.db  main.py  pyproject.toml
backend/: alembic.ini
backend/api/routes/: __init__.py  analysis.py  auth.py  biomaterial.py  doctor.py  home.py  laboratory.py  measurement_units.py  patient.py  patient_link.py  research.py
backend/core/: database.py  error_handlers.py  logger_config.py  settings.py
backend/dependencies/: auth.py
backend/migrations/: env.py
backend/migrations/versions/: 68cea8a08b14_initial_db.py  c99f3c52d35f_add_test_data_in_db.py  e8c84abc350a_init_db.py  effcf3577476_create_table_in_db.py
backend/models/: __init__.py  analysis.py  analysis_result.py  biomaterial.py  doctor.py  enums.py  laboratory.py  measurement_units.py  patient.py  patient_link.py  research.py  user.py
backend/repositories/: __init__.py  analyses.py  biomaterials.py  doctors.py  laboratories.py  measurement_units.py  patient_links.py  patients.py  research.py
backend/schemas/: analysis.py  analysis_result.py  biomaterial.py  doctor.py  laboratory.py  measurement_unit.py  patient.py  patient_link.py  research.py
backend/services/: analysis_service.py  biomaterial_service.py  doctor_service.py  lab_service.py  measurement_unit_service.py  patient_link_service.py  patient_service.py  research_service.py
frontend/static/css/: error.css  main.css
information/: 79af78d099c2_add_test_data_in_db.py  be5843aa701c_init_db.py  init_db_lab_postrges.sql  init_db_sqlite.sql  lab_bot.db
middleware/: handle_response.py
(+14 files in other folders)
